--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,6 +102,8 @@
 
         <activity android:name=".MapProductActivity" />
 
+        <activity android:name=".SeekResultActivity" />
+
     </application>
 
 </manifest>
